# ust-myo

./: .gitignore  CMakeLists.txt  README.md  test-client.rb  test-server.rb
csharp-client/: build.sh  client.cs  main.cs
src/: build.sh  client-test.rb  main.cpp  multiple-myos-VisualStudio2013.sln  multiple-myos-VisualStudio2013.vcxproj  multiple-myos.cpp  server.cpp  server.hpp
src/include/UST/: MyoData.hpp  MyoEvents.hpp  MyoWall.hpp  server.hpp
